--- a/EntityFrameworkDemo2/appsettings.json
+++ b/EntityFrameworkDemo2/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost\\MYDB;Database=EFDemo;Trusted_Connection=True;Encrypt=false;TrustServerCertificate=true"
+    "Default": "Server=localhost\\SQLEXPRESS;Database=EFDemo;Trusted_Connection=True;Encrypt=false;TrustServerCertificate=true"
     //"Default": "workstation id=claysystest.mssql.somee.com;packet size=4096;user id=anushree123_SQLLogin_1;pwd=onkr34f934;data source=claysystest.mssql.somee.com;persist security info=False;initial catalog=claysystest"
   }
 
