refactor: rename solution

--- a/EntityFrameworkDemo2/Properties/launchSettings.json
+++ b/EntityFrameworkDemo2/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "EntityFrameworkDemo2": {
+    "EntityFrameworkDemo": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
